kube-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: cicd-demo-svc
  namespace: dubbo
  labels:
    name: cicd-demo-svc
spec:
  type: NodePort
  selector:
    name: cicd-demo
  ports:
  - port: 9090
    nodePort: 30090
    targetPort: 9090
