kube-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cicd-demo-ingress
  namespace: dubbo
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/app-root: cicd
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: cicd-demo.haier.com
    http:
      paths:
      - path: /demo
        backend:
          serviceName: cicd-demo-svc
          servicePort: 9090
